discussion/kv_engine/173323/173323_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Unify "Disk" and "Memory" backfills

Both types of backfill can now share the same state machine. This
is done by moving the state machine code into DCPBackfill and
removing the now duplicate code from each of the sub-classes.

The DCP backfill hierarchy is now much simpler.

                DCPBackfillIface
                        |
                    DCPBackfill
                        |
       .----------------.-----------------------.
       |                |                       |
DCPBackfillByIdDisk DCPBackfillByIdSeqno DCPBackfillMemoryBuffered

The concrete classes also bring in extra classes for sharing common
data.

DCPBackfillBySeqno is shared by DCPBackfillByIdSeqno and
DCPBackfillMemoryBuffered. This defines the seqno range variables
required for scanning a seqno range.

DCPBackfillDisk is shared by DCPBackfillByIdDisk and
DCPBackfillByIdSeqno. This defines the ScanContext and KVBucket
variables required for a disk scan.

Change-Id: Ibd1fa31fa072b6e71937b3a6e2a1035e95223680

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 20:43:31.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 20:51:22.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38614/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:48:18:
error: unknown type name "VBucket"; did you mean "KVBucket"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38614/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17346/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:45:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:30:25: error: out-of-line definition of "get" does not match any declaration in "CacheCallback" [clang-diagnostic-error]
GetValue CacheCallback::get(VBucket& vb,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:93:23: error: non-const lvalue reference to type "KVBucket" cannot bind to a value of unrelated type "std::__shared_ptr_access<VBucket, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "VBucket") [clang-diagnostic-error]
        auto gv = get(*vb, lookup, *stream_);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:48:27: note: passing argument to parameter "vb" here
    GetValue get(VBucket& vb, CacheLookup& lookup, ActiveStream& stream);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:48:18: error: unknown type name "VBucket"; did you mean "KVBucket"? [clang-diagnostic-error]
    GetValue get(VBucket& vb, CacheLookup& lookup, ActiveStream& stream);
                 ^~~~~~~
                 KVBucket
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:16:7: note: "KVBucket" declared here
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17346/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17346/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45981/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/backfill.cc(60): error C3861: "EP_LOG_WARN": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6957/ : FAILURE

Compile error at [2022-05-08T20:46:48.812Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6957/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18295/ : FAILURE

Compile error at [2022-05-08T20:47:20.201Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19104/ : FAILURE

Compile error at [2022-05-08T20:48:15.223Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19104/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19447/ : FAILURE

Compile error at [2022-05-08T20:49:17.844Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19447/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20132/ : FAILURE

Compile error at [2022-05-08T20:45:28.832Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20132/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27504/ : FAILURE

Compile error at [2022-05-08T20:49:04.061Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7049/ : FAILURE

Compile error at [2022-05-08T20:46:37.095Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7049/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16349/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
